[package]
name = "antr"
version = "1.0.2"
authors = ["Juan Ibiapina <juanibiapina@gmail.com>"]
description = "A simple to use file system event watcher that runs arbitrary commands"
repository = "https://github.com/juanibiapina/antr"
readme = "README.md"
license = "MIT"

[dependencies]
env_logger = "*"
git2 = { version = "*", default-features = false }
log = "*"
notify = "*"
notify-debouncer-mini = "*"
