[package]
name = "antr"
version = "1.0.2"
authors = ["Juan Ibiapina <juanibiapina@gmail.com>"]
description = "A simple to use and high performance file watcher"
repository = "https://github.com/juanibiapina/antr"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "*", features = ["derive"] }
env_logger = "*"
git2 = { version = "*", default-features = false }
log = "*"
notify = "*"
notify-debouncer-mini = "*"
